# Sql101

./: .clang-format  .gitignore  CMakeLists.txt  HL_Context.md  M0_STATUS.md  README.md  conanfile.py  config.json.template
.github/workflows/: ci.yml
cmake/: CompilerConfig.cmake
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  placeholder.cpp
src/data/: CMakeLists.txt  placeholder.cpp
src/eval/: CMakeLists.txt  placeholder.cpp
src/ui/: CMakeLists.txt  placeholder.cpp
src/util/: CMakeLists.txt  placeholder.cpp
tests/: CMakeLists.txt  bootstrap_test.cpp
